# hexagony

./: .copier-answers.yml  .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  libs.versions.toml  pyproject.toml  settings.gradle.kts  shell.nix
.github/workflows/: build_docs.yml  release.yml
buildSrc/src/main/kotlin/hexagony/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hexagony/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/java/hauveli/hexagony/mixin/: HexagonyMixinConfigPlugin.java  MixinDatagenMain.java
common/src/main/kotlin/hauveli/hexagony/: Hexagony.kt  HexagonyAbstractions.kt  HexagonyClient.kt
common/src/main/kotlin/hauveli/hexagony/config/: HexagonyClientConfig.kt  HexagonyServerConfig.kt
common/src/main/kotlin/hauveli/hexagony/datagen/: HexagonyActionTags.kt
common/src/main/kotlin/hauveli/hexagony/mind_anchor/: MindAnchorData.kt  MindAnchorEntry.kt  MindAnchorManager.kt  MindAnchorScanner.kt
common/src/main/kotlin/hauveli/hexagony/networking/: HexagonyNetworking.kt
common/src/main/kotlin/hauveli/hexagony/registry/: HexagonyActions.kt  HexagonyBlockEntities.kt  HexagonyBlockProperties.kt  HexagonyBlocks.kt  HexagonyDamageTypes.kt  HexagonyItems.kt  HexagonyRecipeSerializers.kt  HexagonyRecipeTypes.kt  HexagonyRegistrar.kt
common/src/main/kotlin/hauveli/hexagony/xplat/: IXplatAbstractions.kt
common/src/main/resources/: architectury.common.json  hexagony-common.mixins.json
common/src/main/resources/assets/hexagony/blockstates/: mind_anchor.json
common/src/main/resources/assets/hexagony/lang/: en_us.flatten.json5
doc/: README.md  hexdoc.toml  nodemon.json
doc/resources/assets/hexagony/lang/: en_us.flatten.json5
doc/src/hexdoc_hexagony/: _hooks.py
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/latest/main/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/latest/main/en_us/basics/: index.html
docs/v/latest/main/en_us/casting/: index.html
docs/v/latest/main/en_us/greatwork/: index.html
docs/v/latest/main/en_us/interop/: index.html
docs/v/latest/main/en_us/items/: index.html
docs/v/latest/main/en_us/lore/: index.html
docs/v/latest/main/en_us/patterns/: index.html
fabric/: build.gradle.kts
fabric/src/main/resources/: fabric.mod.json  hexagony-fabric.mixins.json
forge/: build.gradle.kts
forge/src/main/resources/: hexagony-forge.mixins.json  pack.mcmeta
src/common/: hexagony.mixins.json
src/common/main/kotlin/hauveli/hexagony/: Hexagony.kt  HexagonyAbstractions.kt
src/common/main/resources/assets/hexagony/: sounds.json
src/fabric/1.21.1/: hexagony-fabric.mixins.json
src/neoforge/1.21.1/: hexagony-neoforge.mixins.json
(+447 files in other folders)
